2005-02-03  Yong Sun <yong.sun@sun.com>
 
         Fix for #56901
 
         * gui/print.c: (bound_text): When the width>maxwidth, the 
 	pointer 'p' should also be backwarded, same as 'o'.
	
2005-01-31  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #64682
	* gui/e-calendar-view.c: (transfer_item_to): Added an X-property
	so that the backend could identify if the appointment is moved from
	another calendar.

2004-01-16  JP Rosevear  <jpr@novell.com>
 
 	Fixes #41624
 	
 	* conduits/calendar/calendar-conduit.c (local_record_from_comp):
 	append the exceptions, don't keep overwriting the first
	
2005-01-08  Not Zed  <NotZed@Ximian.com>

	* gui/e-day-view.c (e_day_view_finish_resize): set
	last_Edited_comp_string to NULL, not test it for null.

2004-12-06  Rodrigo Moya <rodrigo@novell.com>

	Fixes #68077

	* gui/dialogs/event-page.glade:
	* gui/dialogs/task-page.glade: expand the horizontal box so that it
	fills all available space.

2004-12-06  Rodrigo Moya <rodrigo@novell.com>

	Fixes #67403

	* gui/dialogs/event-page.c (sensitize_widgets): don't unsensitize
	the 'Customize' button, to allow users to look at the alarm list
	for read only events.

	* gui/dialogs/alarm-list-dialog.c (sensitize_buttons): unsensitize
	buttons if the event is read only.

2004-12-02  Chenthill Palanisamy  <pchenthill@novell.com>

	* gui/e-day-view.c (e_day_view_finish_resize), (e_day_view_reshape_day_event),
      	(e_day_view_change_event_time): Free the string day_view->last_edited_comp_string
	before changing assigning it another value.
	* gui/e-week-view.c (e_week_view_change_event_time): Free the string
	week_view->last_edited_comp_string for the same reason above.

2004-11-08  Rodney Dawes  <dobey@novell.com>

	* gui/alarm-notify/alarm-notify-dialog.c (write_html_heading):
	Don't try to convert the results of timet_to_str_with_zone to UTF-8,
	since the return value is already encoded in UTF-8

	Fixes #47529

2004-11-02  JP Rosevear  <jpr@novell.com>
 
 	Fixes #68707
 	